alignment fixes

--- a/modules/shell/cockpit.css
+++ b/modules/shell/cockpit.css
@@ -622,6 +622,11 @@ ul.available-interfaces-group {
     padding-left: 15px;
 }
 
+.table tbody tr td:last-child,
+.table thead tr th:last-child {
+    padding-right: 15px;
+}
+
 .panel-heading {
    height: 44px;
 }
@@ -647,7 +652,7 @@ ul.available-interfaces-group {
  */
 .progress {
     background-color: #e7e7e7;
-    box-shadow: none;
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25) inset;
     font-size: 11px;
     font-weight: bold;
     margin-bottom: 0;
